Rename pull-secret used in periodics of release repo

--- a/ci-operator/jobs/openshift/release/openshift-release-infra-periodics.yaml
+++ b/ci-operator/jobs/openshift/release/openshift-release-infra-periodics.yaml
@@ -79,7 +79,7 @@ periodics:
         name: job-definition
         subPath: cluster-launch-installer-e2e.yaml
       - mountPath: /usr/local/pull-secret
-        name: pull-secret
+        name: release-pull-secret
     serviceAccountName: ci-operator
     volumes:
     - name: cluster-profile
@@ -90,7 +90,7 @@ periodics:
     - configMap:
         name: prow-job-cluster-launch-installer-e2e
       name: job-definition
-    - name: pull-secret
+    - name: release-pull-secret
       secret:
         secretName: ci-pull-credentials
 - agent: kubernetes
@@ -175,7 +175,7 @@ periodics:
         name: job-definition
         subPath: cluster-launch-installer-e2e.yaml
       - mountPath: /usr/local/pull-secret
-        name: pull-secret
+        name: release-pull-secret
     serviceAccountName: ci-operator
     volumes:
     - name: cluster-profile
@@ -186,7 +186,7 @@ periodics:
     - configMap:
         name: prow-job-cluster-launch-installer-e2e
       name: job-definition
-    - name: pull-secret
+    - name: release-pull-secret
       secret:
         secretName: ci-pull-credentials
 - agent: kubernetes
@@ -269,7 +269,7 @@ periodics:
         name: job-definition
         subPath: cluster-launch-installer-e2e.yaml
       - mountPath: /usr/local/pull-secret
-        name: pull-secret
+        name: release-pull-secret
     serviceAccountName: ci-operator
     volumes:
     - name: cluster-profile
@@ -280,7 +280,7 @@ periodics:
     - configMap:
         name: prow-job-cluster-launch-installer-e2e
       name: job-definition
-    - name: pull-secret
+    - name: release-pull-secret
       secret:
         secretName: ci-pull-credentials
 - agent: kubernetes
@@ -362,7 +362,7 @@ periodics:
         name: job-definition
         subPath: cluster-launch-installer-metal-e2e.yaml
       - mountPath: /usr/local/pull-secret
-        name: pull-secret
+        name: release-pull-secret
     serviceAccountName: ci-operator
     volumes:
     - name: cluster-profile
@@ -373,7 +373,7 @@ periodics:
     - configMap:
         name: prow-job-cluster-launch-installer-metal-e2e
       name: job-definition
-    - name: pull-secret
+    - name: release-pull-secret
       secret:
         secretName: ci-pull-credentials
 - agent: kubernetes
@@ -456,7 +456,7 @@ periodics:
         name: job-definition
         subPath: cluster-launch-installer-upi-e2e.yaml
       - mountPath: /usr/local/pull-secret
-        name: pull-secret
+        name: release-pull-secret
     serviceAccountName: ci-operator
     volumes:
     - name: cluster-profile
@@ -467,7 +467,7 @@ periodics:
     - configMap:
         name: prow-job-cluster-launch-installer-upi-e2e
       name: job-definition
-    - name: pull-secret
+    - name: release-pull-secret
       secret:
         secretName: ci-pull-credentials
 - agent: kubernetes
@@ -540,7 +540,7 @@ periodics:
       - mountPath: /usr/local/e2e-aws-upgrade-cluster-profile
         name: cluster-profile
       - mountPath: /usr/local/pull-secret
-        name: pull-secret
+        name: release-pull-secret
     serviceAccountName: ci-operator
     volumes:
     - name: cluster-profile
@@ -548,7 +548,7 @@ periodics:
         sources:
         - secret:
             name: cluster-secrets-aws
-    - name: pull-secret
+    - name: release-pull-secret
       secret:
         secretName: ci-pull-credentials
 - agent: kubernetes
@@ -608,7 +608,7 @@ periodics:
       - mountPath: /usr/local/e2e-azure-upgrade-cluster-profile
         name: cluster-profile
       - mountPath: /usr/local/pull-secret
-        name: pull-secret
+        name: release-pull-secret
     serviceAccountName: ci-operator
     volumes:
     - name: cluster-profile
@@ -616,7 +616,7 @@ periodics:
         sources:
         - secret:
             name: cluster-secrets-azure4
-    - name: pull-secret
+    - name: release-pull-secret
       secret:
         secretName: ci-pull-credentials
 - agent: kubernetes
@@ -688,7 +688,7 @@ periodics:
       - mountPath: /usr/local/e2e-gcp-upgrade-cluster-profile
         name: cluster-profile
       - mountPath: /usr/local/pull-secret
-        name: pull-secret
+        name: release-pull-secret
     serviceAccountName: ci-operator
     volumes:
     - name: cluster-profile
@@ -698,6 +698,6 @@ periodics:
             name: cluster-secrets-gcp
         - configMap:
             name: cluster-profile-gcp
-    - name: pull-secret
+    - name: release-pull-secret
       secret:
         secretName: ci-pull-credentials
