--- a/ci-operator/jobs/openshift/release/openshift-release-release-4.1-periodics.yaml
+++ b/ci-operator/jobs/openshift/release/openshift-release-release-4.1-periodics.yaml
@@ -113,7 +113,7 @@ periodics:
         name: job-definition
         subPath: cluster-launch-installer-e2e.yaml
       - mountPath: /usr/local/pull-secret
-        name: pull-secret
+        name: release-pull-secret
     serviceAccountName: ci-operator
     volumes:
     - name: cluster-profile
@@ -124,7 +124,7 @@ periodics:
     - configMap:
         name: prow-job-cluster-launch-installer-e2e
       name: job-definition
-    - name: pull-secret
+    - name: release-pull-secret
       secret:
         secretName: ci-pull-credentials
 - agent: kubernetes
@@ -203,7 +203,7 @@ periodics:
         name: job-definition
         subPath: cluster-launch-installer-e2e.yaml
       - mountPath: /usr/local/pull-secret
-        name: pull-secret
+        name: release-pull-secret
     serviceAccountName: ci-operator
     volumes:
     - name: cluster-profile
@@ -214,7 +214,7 @@ periodics:
     - configMap:
         name: prow-job-cluster-launch-installer-e2e
       name: job-definition
-    - name: pull-secret
+    - name: release-pull-secret
       secret:
         secretName: ci-pull-credentials
 - agent: kubernetes
@@ -293,7 +293,7 @@ periodics:
         name: job-definition
         subPath: cluster-launch-installer-e2e.yaml
       - mountPath: /usr/local/pull-secret
-        name: pull-secret
+        name: release-pull-secret
     serviceAccountName: ci-operator
     volumes:
     - name: cluster-profile
@@ -304,7 +304,7 @@ periodics:
     - configMap:
         name: prow-job-cluster-launch-installer-e2e
       name: job-definition
-    - name: pull-secret
+    - name: release-pull-secret
       secret:
         secretName: ci-pull-credentials
 - agent: kubernetes
@@ -382,7 +382,7 @@ periodics:
         name: job-definition
         subPath: cluster-launch-installer-e2e.yaml
       - mountPath: /usr/local/pull-secret
-        name: pull-secret
+        name: release-pull-secret
     serviceAccountName: ci-operator
     volumes:
     - name: cluster-profile
@@ -393,7 +393,7 @@ periodics:
     - configMap:
         name: prow-job-cluster-launch-installer-e2e
       name: job-definition
-    - name: pull-secret
+    - name: release-pull-secret
       secret:
         secretName: ci-pull-credentials
 - agent: kubernetes
@@ -471,7 +471,7 @@ periodics:
         name: job-definition
         subPath: cluster-launch-installer-e2e.yaml
       - mountPath: /usr/local/pull-secret
-        name: pull-secret
+        name: release-pull-secret
     serviceAccountName: ci-operator
     volumes:
     - name: cluster-profile
@@ -482,7 +482,7 @@ periodics:
     - configMap:
         name: prow-job-cluster-launch-installer-e2e
       name: job-definition
-    - name: pull-secret
+    - name: release-pull-secret
       secret:
         secretName: ci-pull-credentials
 - agent: kubernetes
@@ -577,7 +577,7 @@ periodics:
       - mountPath: /usr/local/e2e-aws-upgrade-cluster-profile
         name: cluster-profile
       - mountPath: /usr/local/pull-secret
-        name: pull-secret
+        name: release-pull-secret
     serviceAccountName: ci-operator
     volumes:
     - name: cluster-profile
@@ -585,7 +585,7 @@ periodics:
         sources:
         - secret:
             name: cluster-secrets-aws
-    - name: pull-secret
+    - name: release-pull-secret
       secret:
         secretName: ci-pull-credentials
 - agent: kubernetes
@@ -667,7 +667,7 @@ periodics:
       - mountPath: /usr/local/e2e-aws-upgrade-cluster-profile
         name: cluster-profile
       - mountPath: /usr/local/pull-secret
-        name: pull-secret
+        name: release-pull-secret
     serviceAccountName: ci-operator
     volumes:
     - name: cluster-profile
@@ -675,6 +675,6 @@ periodics:
         sources:
         - secret:
             name: cluster-secrets-aws
-    - name: pull-secret
+    - name: release-pull-secret
       secret:
         secretName: ci-pull-credentials
