--- a/ci-operator/jobs/openshift/origin/openshift-origin-release-4.6-presubmits.yaml
+++ b/ci-operator/jobs/openshift/origin/openshift-origin-release-4.6-presubmits.yaml
@@ -166,7 +166,9 @@ presubmits:
       ci-operator.openshift.io/prowgen-controlled: "true"
       pj-rehearse.openshift.io/can-be-rehearsed: "true"
     name: pull-ci-openshift-origin-release-4.6-e2e-aws-csi
+    optional: true
     rerun_command: /test e2e-aws-csi
+    skip_report: true
     spec:
       containers:
       - args:
