--- a/ci-operator/templates/openshift/installer/cluster-launch-installer-metal-e2e.yaml
+++ b/ci-operator/templates/openshift/installer/cluster-launch-installer-metal-e2e.yaml
@@ -614,6 +614,9 @@ objects:
           echo "Waiting for logs ..."
           wait
 
+          tar -czC /tmp/artifacts/must-gather -f /tmp/artifacts/must-gather.tar.gz . &&
+          rm -rf /tmp/artifacts/must-gather
+
           echo "Deprovisioning cluster ..."
           export PACKET_AUTH_TOKEN=$(cat /etc/openshift-installer/.packetcred)
           (cd /tmp/artifacts/terraform && terraform init)
