--- a/ci-operator/templates/openshift/installer/cluster-launch-installer-remote-libvirt-e2e.yaml
+++ b/ci-operator/templates/openshift/installer/cluster-launch-installer-remote-libvirt-e2e.yaml
@@ -530,6 +530,9 @@ objects:
           echo "Waiting for logs ..."
           wait
 
+          tar -czC /tmp/artifacts/must-gather -f /tmp/artifacts/must-gather.tar.gz . &&
+          rm -rf /tmp/artifacts/must-gather
+
           echo "Deprovisioning cluster ..."
           mock-nss.sh openshift-install --dir /tmp/artifacts/installer destroy cluster
         }
