--- a/ci-operator/templates/openshift/openshift-ansible/cluster-scaleup-e2e-40.yaml
+++ b/ci-operator/templates/openshift/openshift-ansible/cluster-scaleup-e2e-40.yaml
@@ -464,6 +464,9 @@ objects:
           echo "Waiting for logs ..."
           wait
 
+          tar -czC /tmp/artifacts/must-gather -f /tmp/artifacts/must-gather.tar.gz . &&
+          rm -rf /tmp/artifacts/must-gather
+
           echo "Deprovisioning cluster ..."
           export AWS_SHARED_CREDENTIALS_FILE=/etc/openshift-installer/.awscred
           openshift-install --dir /tmp/artifacts/installer destroy cluster
